crates/ttrpg_checker/tests/snapshots/snapshot_diagnostics__duplicate_function_declaration.snap
---
source: crates/ttrpg_checker/tests/snapshot_diagnostics.rs
expression: render_errors(source)
---
error: duplicate function declaration `foo`
  --> line 4:5
  |
4 |     derive foo(y: int) -> int { y }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
